@@ -64,7 +64,7 @@ ver 20100414:
 * PSOPLOTBESTF now draws itself much faster, due to not drawing the legend until the final iteration. Apparently having the legend there while constantly updating the plot slows it down significantly.
 * Fixed an empty-matrix error that occured when defining a random initial population for a problem with nonlinear constraints but no linear inequality constraints.
 
-ver 20100414 + 1:
+ver 20100522:
 * Added the ability to solve problems with bitstring (binary) populations. The field options.PopulationType should be set to 'bitstring', and the fitness function should be set up to accept binary vectors for input. It is not yet possible to solve problems with a combination of continuous and binary variables.
 * Verbosity will be set to 1 (corresponding to options.Display == 'final') by default (hardcoded). This prevents errors even if the user defines an invalid string for options.Display.
 * Added framework for 'iter' and 'diagnose' verbosities.
@@ -73,6 +73,7 @@ ver 20100414 + 1:
 * If options.Display is set to 'off', a confirmation is no longer displayed by PSOCREATIONUNIFORM if initial particle positions or velocities are provided. These only appear if the display level is set to 'diagnose'.
 
 To do (in no particular order):
+* A demonstration of a binary optimization solution.
 * An output function defined by options.OutputFcns that can save current swarm state in a file which can be reloaded later as a problem structure, in case of a system crash.
 * Ability to define neighborhoods of particles to determine non-local best positions (social parameter).
   - Social stereotyping using clustering algorithm (Kennedy 2000)
